--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+		<script src="/js/local_settings.js" type="text/javascript" charset="utf-8" defer></script>
 		<script src="/lib/utils.js" type="text/javascript" charset="utf-8" defer></script>
 		<script src="/lib/http-utils.js" type="text/javascript" charset="utf-8" defer></script>
 		<script src="/lib/open-api-js.js" type="text/javascript" charset="utf-8" defer></script>
