Create examples instead

--- a/examples/C42/index.html
+++ b/examples/C42/index.html
@@ -6,9 +6,10 @@
 		<script src="/lib/http-utils.js" type="text/javascript" charset="utf-8" defer></script>
 		<script src="/lib/open-api-js.js" type="text/javascript" charset="utf-8" defer></script>
 		<script src="/js/run.js" type="text/javascript" charset="utf-8" defer></script>
-		<title>SWAGGER JS API</title>
+		<title>Open API Js</title>
 	</head>
 	<body>
-		<button id="runner"/>RUN!</button>
+		<h1>Open API Js</h1>
+		<button id="runner"/>Construct the API</button>
 	</body>
 </html>
